internal/buf/cmd/buf/testdata/workspace/fail/notexist/buf.work
version: v1beta1
directories:
  - notexist
